# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
apps/: database.py
apps/aod/: admin.py  apps.py  models.py
apps/aod/features/api/: router.py  schemas.py  serializers.py  urls.py  views.py
apps/aod/features/estimation/: predictor.py  raster_converter.py  service.py
apps/aod/features/ingestion/: himawari_ingestor.py  processor.py  viirs_ingestor.py
apps/aod/features/prediction/: service.py
apps/aod/features/prediction/ml_models/: jagakarsa.keras  kebun_jeruk.keras  kelapa_gading.keras  lubang_buaya.keras
apps/aod/migrations/: 0001_initial.py  0012_auto_20250801_1127.py  0013_rename_time_retrieve_aerosolopticaldepth_date_and_more.py
apps/weather/: admin.py  apps.py  models.py
apps/weather/features/api/: router.py  schemas.py  serializers.py  urls.py  views.py
apps/weather/features/ingestion/: pm25_crawler.py  pm25_importer.py  weather_fetcher.py
config/: settings.py  urls.py
deploy/initdb/: 10_postgis_raster.sql
docker/initdb/: 10_postgis_raster.sql
scripts/: seed.py
testing/: locustfile.py
testing/postman/: caps-26-backend.postman_collection.json  caps-26-local.postman_environment.json
