[project]
name = "caps-backend"
version = "0.1.0"
description = "PM2.5 & AOD Jakarta Backend API"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.15.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",

    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Scheduler (replaces django-crontab)
    "apscheduler>=3.10.0",

    # Geo & spatial
    "shapely>=2.0.0",
    "geopandas>=1.0.1",
    "rasterio>=1.3.0",
    "rioxarray>=0.17.0",

    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "xarray>=2024.0.0",
    "netcdf4>=1.7.0",
    "scipy>=1.13.0",

    # ML
    "scikit-learn>=1.4.0",
    "tensorflow>=2.16.0",

    # HTTP / scraping
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]
